--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,14 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>tn.esprit</groupId>
-    <artifactId>tp-foyer</artifactId>
+    <artifactId>tp-foyerB</artifactId>
     <version>5.0.0</version>
-    <name>tp-foyer</name>
-    <description>tp-foyer</description>
+    <name>tp-foyerB</name>
+    <description>tp-foyerB</description>
     <properties>
         <java.version>17</java.version>
+        <sonar.projectKey>tp-foyerB</sonar.projectKey>
+        <sonar.host.url>http://localhost:9000</sonar.host.url>
     </properties>
     <dependencies>
 
