--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: mysql:5.7
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=root
+      - MYSQL_ROOT_PASSWORD=
+      - MYSQL_DATABASE=dbFoyer
     ports:
       - 3306:3306
     volumes:
@@ -14,19 +14,18 @@ services:
   app-timesheet:
     depends_on:
       - mysqldb
-    image: azello/tp-foyer-5.0.0
+    image: bayoudhi420/tpfoyerb:1.0.0 
     #build : ./
     restart: on-failure
     ports:
-      - 8089:8089
+      - 8082:8082
     environment:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/dbFoyer?createDatabaseIfNotExist=true",
         "spring.datasource.username" : "root",
-        "spring.datasource.password" : "root",
+        "spring.datasource.password" : null,
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-        "spring.jpa.hibernate.ddl-auto" : "update"
-      }'
+        "spring.jpa.hibernate.ddl-auto" : "update"}'
     stdin_open: true
     tty: true
 
