--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 
 # DB Configuration :
-spring.datasource.url=
-spring.datasource.username=
+spring.datasource.url=jdbc:mysql://mysql.db:3306/dbFoyer?createDatabaseIfNotExist=true
+spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=
+spring.jpa.hibernate.ddl-auto=update
 
 # Web Server (Tomcat) configuration :
-server.port=
-server.servlet.context-path=
+server.port=8082
+server.servlet.context-path=/timesheet_devpos
+
+
+
